# twic

./: .gitignore  README.md  index.html  params.json  stack.yaml  twic.cabal  twic.cfg
res/: favicon.xcf
src/: Config.hs  Main.hs
src/BL/: CloudDataLayer.hs  Core.hs  DataLayer.hs  Parser.hs  Types.hs  Utils.hs  Worker.hs
src/UI/CLI/: Cli.hs
src/UI/HTTP/: App.hs  Css.hs  Html.hs  Json.hs
src/UI/HTTP/cs/: .psci  Gruntfile.js  bower.json  package.json
src/UI/HTTP/cs/res/: App.js  Main.js
src/UI/HTTP/cs/src/: Config.purs  Core.purs  Main.purs  Types.purs  UI.purs  Utils.js  Utils.purs
src/UI/HTTP/cs/src/Lib/: WebSocket.js  WebSocket.purs
src/UI/HTTP/cs/src/UI/: Feed.purs  FeedMetadata.purs  LoaderIndicator.purs  Messages.purs  MyInfo.purs  RootLayout.purs  SearchInput.purs  TweetWriter.purs  Types.purs  UserInfo.purs  layout.xml
