Name:                twic
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable twic
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      bytestring                >= 0.9.1
    , base
    , aeson
    , authenticate-oauth
    , http-conduit
    , text
    , async
    , utf8-string
    , http-types
    , wai                       >= 1.3
    , wai-extra                 >= 1.3
    , warp                      >= 1.3
    , blaze-html                >= 0.5
    , blaze-markup              >= 0.5.1
    , blaze-builder
    , transformers
    , clay
    , regex-posix
    , lifted-base
    , parsec
    , split
    , wai-app-static
    , system-fileio
    , wai-dispatch
    , mtl
    , acid-state
    , safecopy
    , websockets
    , wai-websockets
    , twitter-conduit         >= 0.1.0
    , aeson-lens
    , twitter-types-lens
    , lens
    , lens-action
    , conduit-extra
    , conduit
    , twitter-types           >= 0.7.0
    , unordered-containers
    , uuid
    , time
    , hslogger
    , unix
    , containers
    , file-embed
    , process

